@@ -506,7 +506,7 @@ QStringList SqlLibraryModel::filenames(const QModelIndexList &list, bool allowPl
 QModelIndex SqlLibraryModel::findSongIndex(const Song &song)
 {
     if (root) {
-        QModelIndex albumIndex=findAlbumIndex(song.artistOrComposer(), song.albumId());
+        QModelIndex albumIndex=findAlbumIndex(song.albumArtistOrComposer(), song.albumId());
         if (albumIndex.isValid()) {
             if (canFetchMore(albumIndex)) {
                 fetchMore(albumIndex);
