@@ -163,7 +163,7 @@ public:
     QSet<QString> getGenres() const;
     QSet<QString> getArtists() const;
     QList<Song> getAlbumTracks(const QString &artistId, const QString &albumId) const;
-    QList<Song> getAlbumTracks(const Song &song) const { return getAlbumTracks(song.artistOrComposer(), song.albumId()); }
+    QList<Song> getAlbumTracks(const Song &song) const { return getAlbumTracks(song.albumArtistOrComposer(), song.albumId()); }
     QList<Song> songs(const QStringList &files, bool allowPlaylists=false) const;
     QList<LibraryDb::Album> getArtistAlbums(const QString &artist) const;
     void getDetails(QSet<QString> &artists, QSet<QString> &albumArtists, QSet<QString> &composers, QSet<QString> &albums, QSet<QString> &genres);
